# auto_notebook

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  A_stock_final.py  CURSOR_SYNC_GUIDE.md  DEVELOPMENT_NOTES.md  GENERATE_SECTOR_REPORTS_README.md  GITHUB_REPO_ANALYSIS.md  INSTALL_DEPS.md  LOCAL_TEST_REPORT.md  MONITOR_SYSTEM_GUIDE.md  OPTIMIZATION_RECOMMENDATIONS.md  OPTIMIZATION_SUMMARY.md  QUICK_START.md  README.md  REFACTORING_TODO.md  STANDALONE_MONITOR_SYSTEM.md  auth_tool.py  cursor_telegram_google_drive.md  demo_ai_parsing.py  generate_missing_sectors.py  generate_sector_group_1.sh  generate_sector_group_10.sh  generate_sector_group_2.sh  generate_sector_group_3.sh  generate_sector_group_4.sh  generate_sector_group_5.sh  generate_sector_group_6.sh  generate_sector_group_7.sh  generate_sector_group_8.sh  generate_sector_group_9.sh  generate_sector_reports.py  github_stock_bot.py  main.py  main_advanced.py  main_simple.py  mkdocs.yml  pyproject.toml  quick_test.py  (+19 more)
.cursor/: QUICK_START.md  README.md  auto_restore_agent_config.sh  restore_agent_config.sh  sync_agent_config.sh  tasks.json
.github/workflows/: code-quality.yml  stock_bot.yml
config/: config.example.yaml  config.yaml  monitor_rules.yaml  monitor_rules_test.yaml  sector_index_map.json  test_rules.yaml
docs/: A_SHARE_DATA_SOURCES.md  DATABASE.md  DATABASE_GUIDE.md  DEPENDENCIES.md  HK_DATA_SOURCES.md  SECTOR_INDEX_MAP.md  SECTOR_INDEX_USAGE.md  index.md
docs/api/: data.md  (+2 more)
examples/: basic_analysis.py  quick_start.py
scripts/: db_stats.py
tests/: README.md  conftest.py
(+55 files in other folders)
